--- a/src/component/menu.css
+++ b/src/component/menu.css
@@ -39,7 +39,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 2em;;
+    margin-top: 90px;
     gap: 1em;
 }
 
