--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,18 @@ h3{
   font-weight: 400;
   text-transform: uppercase;
 }
+h4{
+  font-family: var(--fontTexte);
+  color: var(--noir);
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+h4 > span{
+
+  font-weight: bold;
+  
+}
 h3.span{
   font-weight:700;
 }
@@ -83,4 +95,8 @@ li{
 }
 .padding{
   padding: 0px 80px;
+}
+
+.realisation-dark {
+  background-color: #000 !important;
 }
