--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 #root {
   
   margin: 0 auto;
+  max-width: 1400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px 80px;
 
 }
 
