--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -1,11 +1,25 @@
 .footer {
+    position: relative;
     background-color: var(--noir);
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 90px;
+    width: 100%;
+    max-width: 1400px;
 }
+.footer::before {
+    content: "";
+  position: absolute;
+  inset: 0;               /* top:0; right:0; bottom:0; left:0; */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100vw;           /* plein écran */
+  background-color: var(--noir);
+  z-index: -1;  
+}
+
 .cta{
     display: flex;
     align-items: flex-start;
