--- a/src/PagePorfolio.css
+++ b/src/PagePorfolio.css
@@ -9,6 +9,9 @@
     text-align: center;
     line-height: 1.2em;
 }
+.headerDark > img{
+    margin-top: -120px;
+}
 .headerDark > p{
     color: var(--beige);
     text-align: center;
@@ -72,41 +75,5 @@ h3.dark{
     border-radius: 10px;
     font-family: var(--fontCode);
     text-transform: uppercase;
-    margin-top: 20px;
 }
  /*Section projet wrap*/
- .sectionProjet{
-    display: flex;
-    width: 100%;
-     gap :40px;
- }
-
- .lesProjets{
-display: grid;
-  width: 75%;           
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  column-gap: 40px;      
-  row-gap: 40px;         
- }
-
- .blockProjet> a {
-  display: block; 
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
- }
-
- .blockProjet > img{
-    width: 100%;
-  height: auto;
-  display: block;
-  object-fit: cover;
- }
-
- .blockProjet h3 {
-  display: block;   
-  width: 100%;
-  margin: 12px 0 0;   
-  color: var(--beige); 
-  word-wrap: break-word; 
-}
